--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Coming Soon=-</h1>
+        <h1 class="title">Coming Soon</h1>
         <div class="loader">
             <div class="circle"></div>
             <div class="circle"></div>
