--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
                 <div class="s-hero__content-about">
 
-                    <h1>I'm Jonathan Doe.</h1>
+                    <h1>I'm Mounif Haydar.</h1>
 
                     <h3>
-                    I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-                    effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+                        I'm a Lebanon-based <span>Senior Software Developer</span> and <span>Leadership Mentor</span> with 10 years of experience in software development, creating large and
+                    scalable applications for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
                     and learn more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
 
@@ -119,16 +119,7 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem 
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa 
-                quae ab illo inventore veritatis et quasi architecto beatae vitae 
-                dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit 
-                aspernatur aut odit aut fugit, sed quia consequuntur magni dolores 
-                eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, 
-                qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, 
-                sed quia non numquam eius modi tempora incidunt ut labore et dolore 
-                magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis 
-                nostrum exercitationem ullam corporis suscipit laboriosam.
+                    I am a certified computer engineer with 10 years of experience in software development. Currently, I serve as a Senior Software Developer and Leadership Mentor at NEXtCARE - Allianz Partners.
                 </p>
 
                 <hr>
@@ -138,16 +129,16 @@
                         <h3>Contact Details</h3>
     
                         <p>
-                        Jonathan Doe <br>
-                        1600 Amphitheatre Parkway <br>
-                        Mountain View, CA 94043 US <br>
-                        <a href="tel:+1975432345">+197 543 2345</a> <br>
-                        <a href="mailto:#0">sayhello@ceevee.com</a>
+                            Mounif Haydar <br>
+                            Daher el Jamal Street<br>
+                            Sin El Fil<br>
+                        <a href="tel:+1975432345">+961 71 4321 16</a> <br>
+                        <a href="mailto:mounifhaydar@gmail.com">mounifhaydar@gmail.com</a>
                         </p>
                         
                     </div>
                     <div class="column w-1000-stack">
-                        <a href="#0" class="btn btn--download">
+                        <a href="https://mounifhaydar.github.io/files/CV.pdf" class="btn btn--download">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
                             Download CV
                         </a>
@@ -171,20 +162,17 @@
                 <div class="resume-block">
 
                     <div class="resume-block__header">
-                        <h4 class="h3">Dropbox</h4>
+                        <h4 class="h3">NEXtCARE - Allianz Partners</h4>
                         <p class="resume-block__header-meta">
-                            <span>Product Designer</span> 
+                            <span>Senior Software Developer</span> 
                             <span class="resume-block__header-date">
-                                August 2019 - Present
+                                July 2016 - Present
                             </span>
                         </p>
                     </div>
 
                     <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        Developed modules in an Automation Engine to adjudicate requests submitted from Hospitals to Insurance companies. Automated 80% of the requests to be routed without human intervention, covering more than 10 countries and handling at least 500,000 transactions per day. Leading a team to migrate solutions from legacy technologies to modern platforms and microservices, integrating with CI/CD DevOps pipelines.
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -192,20 +180,17 @@
                 <div class="resume-block">
 
                     <div class="resume-block__header">
-                        <h4 class="h3">Facebook</h4>
+                        <h4 class="h3">Cedar IT Services</h4>
                         <p class="resume-block__header-meta">
-                            <span>UI/UX Designer</span> 
+                            <span>Software Developer</span> 
                             <span class="resume-block__header-date">
-                                August 2016 - July 2019
+                                September 2014 - July 2016
                             </span>
                         </p>
                     </div>
 
                     <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        Developed a web application for banking system. Migrated the CDR (Central de Risk) application of the BDL (Bank du Liban) using JSF framework. Developed and delivered efficient and reusable code, optimized screen responsivity, and configured database servers, Bonobo, Git, and WebSphere on Linux environments.
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -221,44 +206,21 @@
                 <div class="resume-block">
 
                     <div class="resume-block__header">
-                        <h4 class="h3">University of Life</h4>
+                        <h4 class="h3">Islamic University of Lebanon</h4>
                         <p class="resume-block__header-meta">
-                            <span>Master in Graphic Design</span> 
+                            <span>Master in Computer and Communication Engineering</span> 
                             <span class="resume-block__header-date">
-                                April 2015
+                                August 2014
                             </span>
                         </p>
                     </div>
 
                     <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        Thesis: Prepaid Electric Meter - Integrated software and hardware components. Developed an Android app for electric balance recharge using QR Code and GSM modules.
                     </p>
 
                 </div> <!-- end resume-block -->
 
-                <div class="resume-block">
-
-                    <div class="resume-block__header">
-                        <h4 class="h3">School of Cool Designers</h4>
-                        <p class="resume-block__header-meta">
-                            <span>B.A. Degree in Graphic Design</span> 
-                            <span class="resume-block__header-date">
-                                August 2012
-                            </span>
-                        </p>
-                    </div>
-
-                    <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
-                    </p>
-
-                </div> <!-- end resume-block -->
             </div>
         </div> <!-- s-resume__section -->
 
