--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Ceevee 2.0</title>
+    <title>Mounif Haydar Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -29,6 +29,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 
+
 </head>
 
 <body id="top" class="ss-preload">
@@ -50,8 +51,10 @@
                     <li class="current"><a class="smoothscroll" href="#hero">Home</a></li>
                     <li><a class="smoothscroll" href="#about">About</a></li>
                     <li><a class="smoothscroll" href="#resume">Resume</a></li>
-                    <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-                    <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+                    <!--
+                    <li style="display: none;"><a class="smoothscroll" href="#portfolio">Works</a></li>
+                    <li style="display: none;"><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+                    -->
                     <li><a class="smoothscroll" href="#contact">Say Hello</a></li>
                 </ul>
             </nav>
@@ -76,19 +79,23 @@
 
                     <h1>I'm Mounif Haydar.</h1>
 
-                    <h3>
-                        I'm a Lebanon-based <span>Senior Software Developer</span> and <span>Leadership Mentor</span> with 10 years of experience in software development, creating large and
+                    <h3 class="experience-placeholder">
+                        I'm a Lebanon-based <span>Senior Software Developer</span> and <span>Leadership Mentor</span> with {{experience-placeholder}} years of experience in software development, creating large and
                     scalable applications for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
                     and learn more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
 
                     <div class="s-hero__content-social">
-                        <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                        <!--<a href="#0" style="display: none;" rel="noopener nofollow" target="_blank" title="Visit Mounif's Facebook profile" aria-label="facebook"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
+                        <a href="#0" style="display: none;" rel="noopener nofollow" target="_blank" title="Visit Mounif's Twitter profile" aria-label="twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                        <a href="#0" style="display: none;" rel="noopener nofollow" target="_blank" title="Visit Mounif's Instagram profile" aria-label="instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                        <a href="#0" style="display: none;" rel="noopener nofollow" target="_blank" title="Visit Mounif's Dribbble profile" aria-label="dribbble"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
+                        <a href="#0" style="display: none;" rel="noopener nofollow" target="_blank" title="Visit Mounif's Behance profile" aria-label="behance"><i class="fab fa-behance" aria-hidden="true"></i></a>
+                    -->
+                        <a href="https://codepen.io/mounifhaydar" rel="noopener nofollow" target="_blank" title="Visit Mounif's Codepen profile" aria-label="Codepen"><i class="fab fa-codepen" aria-hidden="true"></i></a>
+                        <a href="https://github.com/MounifHaydar"rel="noopener nofollow" target="_blank" title="Visit Mounif's Github profile" aria-label="Github"><i class="fab fa-github" aria-hidden="true"></i></a>
+                        <a href="https://stackoverflow.com/users/20085178/mounif-haydar" rel="noopener nofollow" target="_blank" title="Visit Mounif's Stack Overflow profile" aria-label="Stack Overflow"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/mounif-haydar/" rel="noopener nofollow" target="_blank" title="Visit Mounif's Linkedin profile" aria-label="Linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                     </div>
 
                 </div> <!-- end s-hero__content-about -->
@@ -114,12 +121,20 @@
 
         <div class="row">
             <div class="column large-3 tab-12">
-                <img class="s-about__pic" src="images/avatars/user-06.jpg" alt="">
+                <img class="s-about__pic" src="images/avatars/user-09.jpg" alt="">
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
-                <p>
-                    I am a certified computer engineer with 10 years of experience in software development. Currently, I serve as a Senior Software Developer and Leadership Mentor at NEXtCARE - Allianz Partners.
+                <p class="experience-placeholder">
+                    I am a certified computer engineer with {{experience-placeholder}} years of experience in software development. Currently, I serve as a Senior Software Developer and Leadership Mentor at NEXtCARE - Allianz Partners.
+                    <br>
+                    I excel in automating complex processes and modernizing legacy systems. My expertise includes designing and developing modules for an automation engine, significantly reducing manual intervention. Leading a team in migrating solutions to modern platforms and microservices, I integrate CI/CD DevOps pipelines to streamline development and deployment.
+                    <br>
+                    In addition to my backend prowess with Java Spring Boot, JPA, REST API, and more, I have a strong background in frontend development, enhancing UI/UX practices for both mobile and web applications using frameworks like Angular and Cordova.
+                    <br>
+                    My skill set spans a wide range of technologies including Jenkins, Docker, Grafana, and various databases such as PostgreSQL and Oracle.
+                    <br>
+                    My commitment to quality is demonstrated through the development of an auto-detection solution for bug tracking and my mentorship of junior developers, ensuring code quality and professional growth. I am adept at Agile methodologies, sprint planning, and have a proven track record of leading teams for over six years. 
                 </p>
 
                 <hr>
@@ -132,13 +147,13 @@
                             Mounif Haydar <br>
                             Daher el Jamal Street<br>
                             Sin El Fil<br>
-                        <a href="tel:+1975432345">+961 71 4321 16</a> <br>
-                        <a href="mailto:mounifhaydar@gmail.com">mounifhaydar@gmail.com</a>
+                        <a href="tel:+1975432345" title="Call Mounif" aria-label="Call Mounif's number">+961 71 4321 16</a> <br>
+                        <a href="mailto:mounifhaydar@gmail.com" title="Email Mounif" aria-label="Email Mounif">mounifhaydar@gmail.com</a>
                         </p>
                         
                     </div>
                     <div class="column w-1000-stack">
-                        <a href="https://mounifhaydar.github.io/files/CV.pdf" class="btn btn--download">
+                        <a href="./files/CV.pdf" download="CV.pdf" class="btn btn--download" rel="noopener nofollow" title="Download Mounif's CV" aria-label="Download Mounif's CV">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
                             Download CV
                         </a>
@@ -216,7 +231,7 @@
                     </div>
 
                     <p>
-                        Thesis: Prepaid Electric Meter - Integrated software and hardware components. Developed an Android app for electric balance recharge using QR Code and GSM modules.
+                        Thesis: Prepaid Electric Meter - Integrated software and hardware components. Developed an Android app for payment transactions and designed an electronic circuit to monitor consumption and communicate via NFC. (.NET Web Services and SQL Server database).
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -233,10 +248,7 @@
                 <div class="resume-block">
 
                     <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore 
-                    vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae 
-                    aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam 
-                    nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        I possess a diverse set of skills in various programming languages and technologies, These skills reflect my ability to contribute effectively to various aspects of software development, from frontend design to backend integration and database management.
                     </p>
 
                     <ul class="skill-bars-fat">
@@ -245,24 +257,24 @@
                         <strong>HTML</strong>
                         </li>
                         <li>
-                        <div class="progress percent85"></div>
+                        <div class="progress percent65"></div>
                         <strong>CSS</strong>
                         </li>
                         <li>
-                        <div class="progress percent65"></div>
+                        <div class="progress percent85"></div>
                         <strong>Javascript</strong>
                         </li>
                         <li>
                         <div class="progress percent90"></div>
-                        <strong>Figma</strong>
+                        <strong>Java</strong>
                         </li>
                         <li>
                         <div class="progress percent75"></div>
-                        <strong>Illustrator</strong>
+                        <strong>PL/SQL</strong>
                         </li>
                         <li>
                         <div class="progress percent60"></div>
-                        <strong>Photoshop</strong>
+                        <strong>Angular</strong>
                         </li>
                     </ul>
 
@@ -276,8 +288,8 @@
 
     <!-- portfolio
     ================================================== -->
-    <section id="portfolio" class="s-portfolio target-section">
-
+  
+    <section id="portfolio" class="s-portfolio target-section" style="display: none;">
         <div class="row s-portfolio__header">
             <div class="column large-12">
                 <h3>A Few Of My Latest Creations</h3>
@@ -489,11 +501,11 @@
 
 
     </section> <!-- end s-portfolio -->
-
+-->
 
     <!-- CTA
     ================================================== -->
-    <section class="s-cta">
+    <section class="s-cta" style="display: none;">
 
         <div class="row">
             <div class="column">
@@ -520,7 +532,7 @@
 
     <!-- testimonials
     ================================================== -->
-    <section id="testimonials" class="s-testimonials target-section">
+    <section id="testimonials" class="s-testimonials target-section" style="display: none;">
 
         <div class="s-testimonials__bg"></div>
 
@@ -641,7 +653,7 @@
                                 Email
                             </h5>
                             <p class="contact-block__content">
-                                <a class="mailtoui" href="mailto:sayhello@ceevee.com">sayhello@ceevee.com</a>
+                                <a class="mailtoui" href="mailto:mounifhaydar@gmail.com">mounifhaydar@gmail.com</a>
                             </p>
                         </div> <!-- end contact-block -->
                     </div>
@@ -651,13 +663,13 @@
                                 Phone
                             </h5>
                             <p class="contact-block__content">
-                                <a href="tel:+1975432345">+197 543 2345</a>
+                                <a href="tel:+96171432116">+961 71 4321 16</a>
                             </p>
                         </div> <!-- end contact-block -->
                     </div>
 
                     <div class="column large-12">
-                        <a href="mailto:sayhello@ceevee.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
+                        <a href="mailto:mounifhaydar@gmail.com" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
                     </div>
                 </div> <!-- end contact-infos -->
 
@@ -673,17 +685,16 @@
         <div class="row">
             <div class="column large-4 medium-6 w-1000-stack s-footer__social-block">
                 <ul class="s-footer__social">
-                    <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                    <li><a href="https://codepen.io/mounifhaydar" rel="noopener nofollow" target="_blank" title="Visit Mounif's Codepen profile" aria-label="Codepen"><i class="fab fa-codepen" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/MounifHaydar"rel="noopener nofollow" target="_blank" title="Visit Mounif's Github profile" aria-label="Github"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://stackoverflow.com/users/20085178/mounif-haydar" rel="noopener nofollow" target="_blank" title="Visit Mounif's Stack Overflow profile" aria-label="Stack Overflow"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/mounif-haydar/" rel="noopener nofollow" target="_blank" title="Visit Mounif's Linkedin profile" aria-label="Linkedin"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
             <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-                <span>© Copyright Ceevee 2021</span> 
-                <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
+                <span>© Copyright Mounif Haydar 2024-present. All rights reserved.</span> 
+                <span style="display: none;">Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
             </div>
         </div>
 
