Add .net to skills

--- a/index.html
+++ b/index.html
@@ -265,16 +265,20 @@
                         <strong>Javascript</strong>
                         </li>
                         <li>
+                        <div class="progress percent60"></div>
+                        <strong>Angular</strong>
+                        </li>
+                        <li>
                         <div class="progress percent90"></div>
                         <strong>Java</strong>
                         </li>
                         <li>
+                            <div class="progress percent80"></div>
+                            <strong>Dot NET</strong>
+                            </li>
+                        <li>
                         <div class="progress percent75"></div>
                         <strong>PL/SQL</strong>
-                        </li>
-                        <li>
-                        <div class="progress percent60"></div>
-                        <strong>Angular</strong>
                         </li>
                     </ul>
 
