--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- icon metas
+     ================================================== -->
+    <meta property="og:image" content="favicon.ico">
+    <meta property="og:image:type" content="image/png"> <!-- Specify image type if needed -->
+    <meta property="og:image:width" content="256"> <!-- Image width in pixels -->
+    <meta property="og:image:height" content="256"> <!-- Image height in pixels -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/styles.css">
