--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <!-- icon metas
      ================================================== -->
-    <meta property="og:image" content="favicon.ico">
+    <meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico">
     <meta property="og:image:type" content="image/png"> <!-- Specify image type if needed -->
     <meta property="og:image:width" content="256"> <!-- Image width in pixels -->
     <meta property="og:image:height" content="256"> <!-- Image height in pixels -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico" />
 
     <!-- CSS
     ================================================== -->
@@ -32,9 +32,11 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="https://mounifhaydar.github.io/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://mounifhaydar.github.io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://mounifhaydar.github.io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://mounifhaydar.github.io/favicon-16x16.png">
+    <meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico" />
     <link rel="manifest" href="site.webmanifest">
 
 
