--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Mounif Haydar Portfolio</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <title>Mounif Haydar - Web Developer</title>
+    <meta name="description" content="Web Developer, IT trainer and consultant.">
+    <meta name="author" content="Mounif Haydar">
+    <meta property="og:type" content="website">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:url" content="https://mounifhaydar.github.io/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@mounifhaydar">
+    <meta name="author" content="Mounif Haydar">
+    <link rel="canonical" href="https://mounifhaydar.github.io/">
+    <meta property="og:site_name" content="Mounif Haydar - Web Developer">
+    <meta name="google-site-verification" content="ebkpMWbEfbQCMZWwxu5xRTyybnsqgpjeCeuvnMu6Xdg" />
     <!-- mobile specific metas
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+ 
     <!-- icon metas
      ================================================== -->
-    <meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico">
     <meta property="og:image:type" content="image/png"> <!-- Specify image type if needed -->
     <meta property="og:image:width" content="256"> <!-- Image width in pixels -->
     <meta property="og:image:height" content="256"> <!-- Image height in pixels -->
-    <meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico" />
-
+    <meta property="og:image" content="https://mounifhaydar.github.io/apple-touch-icon.png" />
+    <!--<meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico" />-->
+    
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/styles.css">
@@ -30,15 +38,80 @@
     ================================================== -->
     <script defer src="js/vendor/fontawesome/all.min.js"></script>
 
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "WebSite",
+                    "@id": "https://mounifhaydar.github.io/#website",
+                    "url": "https://mounifhaydar.github.io/",
+                    "name": "Mounif Haydar - Web Developer",
+                    "description": "Web Developer, IT trainer and consultant.",
+                    "sameAs": [
+                        "https://twitter.com/mounifhaydar",
+                        "https://www.facebook.com/mounifhaydar",
+                        "https://www.linkedin.com/in/mounif-haydar/"
+                    ],
+                    "potentialAction": [
+                        {
+                            "@type": "SearchAction",
+                            "target": {
+                                "@type": "EntryPoint",
+                                "urlTemplate": "https://mounifhaydar.github.io/?s={search_term_string}"
+                            },
+                            "query-input": "required name=search_term_string"
+                        }
+                    ],
+                    "inLanguage": "en-US"
+                },
+                {
+                    "@type": "CollectionPage",
+                    "@id": "https://mounifhaydar.github.io/#webpage",
+                    "url": "https://mounifhaydar.github.io/",
+                    "name": "Mounif Haydar - Web Developer",
+                    "isPartOf": {
+                        "@id": "https://mounifhaydar.github.io#website"
+                    },
+                    "about": {
+                        "@id": "https://mounifhaydar.github.io/#organization"
+                    },
+                    "description": "Web Developer, IT trainer and consultant.",
+                    "breadcrumb": {
+                        "@id": "https://mounifhaydar.github.io/#breadcrumb"
+                    },
+                    "inLanguage": "en-US",
+                    "potentialAction": [
+                        {
+                            "@type": "ReadAction",
+                            "target": [
+                                "https://mounifhaydar.github.io/"
+                            ]
+                        }
+                    ]
+                },
+                {
+                    "@type": "BreadcrumbList",
+                    "@id": "https://mounifhaydar.github.io/#breadcrumb",
+                    "itemListElement": [
+                        {
+                            "@type": "ListItem",
+                            "position": 1,
+                            "name": "Home"
+                        }
+                    ]
+                }
+            ]
+        }
+    </script>
     <!-- favicons
     ================================================== -->
     <link rel="icon" type="image/x-icon" href="https://mounifhaydar.github.io/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="https://mounifhaydar.github.io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://mounifhaydar.github.io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://mounifhaydar.github.io/favicon-16x16.png">
-    <meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico" />
     <link rel="manifest" href="site.webmanifest">
-
+    <script async defer data-domain="mounifhaydar.github.io" src="https://plausible.io/js/script.js"></script>
 
 </head>
 
@@ -515,7 +588,6 @@
 
 
     </section> <!-- end s-portfolio -->
--->
 
     <!-- CTA
     ================================================== -->
