--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <meta property="og:image:type" content="image/png"> <!-- Specify image type if needed -->
     <meta property="og:image:width" content="256"> <!-- Image width in pixels -->
     <meta property="og:image:height" content="256"> <!-- Image height in pixels -->
-    <meta property="og:image" content="https://mounifhaydar.github.io/apple-touch-icon.png" />
-    <!--<meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico" />-->
-    
+<!--<meta property="og:image" content="https://mounifhaydar.github.io/apple-touch-icon.png" />-->
+    <meta property="og:image" content="https://mounifhaydar.github.io/lightning.png" />
+<!--<meta property="og:image" content="https://mounifhaydar.github.io/favicon.ico" />-->
+
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/styles.css">
