--- a/index.html
+++ b/index.html
@@ -353,12 +353,16 @@
                         <strong>Angular</strong>
                         </li>
                         <li>
+                            <div class="progress percent80"></div>
+                            <strong>React.js</strong>
+                        </li>
+                        <li>
                         <div class="progress percent90"></div>
                         <strong>Java</strong>
                         </li>
                         <li>
                             <div class="progress percent80"></div>
-                            <strong>Dot NET</strong>
+                            <strong>.NET</strong>
                             </li>
                         <li>
                         <div class="progress percent75"></div>
@@ -376,8 +380,8 @@
 
     <!-- portfolio
     ================================================== -->
-  
-    <section id="portfolio" class="s-portfolio target-section" style="display: none;">
+  <!--style="display: none;"-->
+    <section id="portfolio" class="s-portfolio target-section" >
         <div class="row s-portfolio__header">
             <div class="column large-12">
                 <h3>A Few Of My Latest Creations</h3>
@@ -386,15 +390,15 @@
 
         <div class="row collapse block-large-1-4 block-medium-1-3 block-tab-1-2 block-500-stack folio-list">
 
-            <div class="column folio-item">
+            <div class="column folio-item" style="left: 40%;position: sticky;">
                 <a href="#modal-01" class="folio-item__thumb">
-                    <img src="images/portfolio/droplet.jpg" 
-                         srcset="images/portfolio/droplet.jpg 1x, 
-                                 images/portfolio/droplet@2x.jpg 2x" alt="">
+                    <img src="images/portfolio/jsonCompare.jpg" 
+                         srcset="images/portfolio/jsonCompare.jpg 1x, 
+                                 images/portfolio/jsonCompare@2x.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
+            <div class="column folio-item" style="display: none;">
                 <a href="#modal-02" class="folio-item__thumb">
                     <img src="images/portfolio/lamp.jpg" 
                          srcset="images/portfolio/lamp.jpg 1x, 
@@ -402,7 +406,7 @@
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
+            <div class="column folio-item" style="display: none;">
                 <a href="#modal-03" class="folio-item__thumb">
                     <img src="images/portfolio/minimalismo.jpg" 
                          srcset="images/portfolio/minimalismo.jpg 1x, 
@@ -410,7 +414,7 @@
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
+            <div class="column folio-item" style="display: none;">
                 <a href="#modal-04" class="folio-item__thumb">
                     <img src="images/portfolio/shutterbug.jpg" 
                          srcset="images/portfolio/shutterbug.jpg 1x, 
@@ -418,7 +422,7 @@
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
+            <div class="column folio-item" style="display: none;">
                 <a href="#modal-05" class="folio-item__thumb">
                     <img src="images/portfolio/fuji.jpg" 
                          srcset="images/portfolio/fuji.jpg 1x, 
@@ -426,7 +430,7 @@
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
+            <div class="column folio-item" style="display: none;">
                 <a href="#modal-06" class="folio-item__thumb">
                     <img src="images/portfolio/skaterboy.jpg" 
                          srcset="images/portfolio/skaterboy.jpg 1x, 
@@ -434,7 +438,7 @@
                 </a>
             </div> <!-- end folio-item -->
 
-            <div class="column folio-item">
+            <div class="column folio-item" style="display: none;">
                 <a href="#modal-07" class="folio-item__thumb">
                     <img src="images/portfolio/rucksack.jpg" 
                          srcset="images/portfolio/rucksack.jpg 1x, 
@@ -457,11 +461,11 @@
         =========================================================== -->
         <div id="modal-01" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-droplet.jpg" alt="" />
+                <img src="images/portfolio/gallery/g-jsonCompare.jpg" alt="" />
     
                 <div class="modal-popup__desc">
-                    <h5>Droplet</h5>
-                    <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias qui assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                    <h5>JSON Compare</h5>
+                    <p>JSON Compare is a powerful web service designed to help you compare and analyze JSON data efficiently. Whether you're dealing with configuration files, API responses, or any other JSON data, JSON Compare makes it easy to identify differences and similarities.</p>
                     <ul class="modal-popup__cat">
                         <li>Branding</li>
                         <li>Product Design</li>
