--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <h1>I'm Mounif Haydar.</h1>
 
                     <h3 class="experience-placeholder">
-                        I'm a Lebanon-based <span>Senior Software Developer</span> and <span>Leadership Mentor</span> with {{experience-placeholder}} years of experience in software development, creating large and
+                        I'm a Lebanon-based <span>Software Development Team Lead</span> with {{experience-placeholder}} years of experience in software development, creating large and
                     scalable applications for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
                     and learn more <a class="smoothscroll" href="#about">about me</a>.
                     </h3>
@@ -210,7 +210,9 @@
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
                 <p class="experience-placeholder">
-                    I am a certified computer engineer with {{experience-placeholder}} years of experience in software development. Currently, I serve as a Senior Software Developer and Leadership Mentor at NEXtCARE - Allianz Partners.
+                    I am a certified computer engineer with {{experience-placeholder}} years of experience in software development. Currently, I serve as a Software Development Team Lead at Poseidon IT Services.
+                    <br>
+                    In my role, I specialize in designing and implementing features for document management systems, including advanced permission management, workflow automation using Camunda, and seamless integrations with Alfresco. My expertise extends to developing secure and scalable solutions with technologies like Spring Security OAuth2, OpenAPI, and Keycloak.
                     <br>
                     I excel in automating complex processes and modernizing legacy systems. My expertise includes designing and developing modules for an automation engine, significantly reducing manual intervention. Leading a team in migrating solutions to modern platforms and microservices, I integrate CI/CD DevOps pipelines to streamline development and deployment.
                     <br>
@@ -261,11 +263,30 @@
                 <div class="resume-block">
 
                     <div class="resume-block__header">
+                        <h4 class="h3">Poseidon IT Services</h4>
+                        <p class="resume-block__header-meta">
+                            <span>Software Development Team Lead</span> 
+                            <span class="resume-block__header-date">
+                                October 2024 – Present
+                            </span>
+                        </p>
+                    </div>
+
+                    <p>
+                        Designing and developing new features in a Document Management System (DMS), enabling advanced file and folder permission management using the Alfresco engine. Integrating Camunda for workflow automation, allowing users to initiate, track, and manage document processes efficiently.
+Optimizing security using technologies like Spring Security, OAuth2, and Keycloak.
+                    </p>
+
+                </div> <!-- end resume-block -->
+                
+                <div class="resume-block">
+
+                    <div class="resume-block__header">
                         <h4 class="h3">NEXtCARE - Allianz Partners</h4>
                         <p class="resume-block__header-meta">
                             <span>Senior Software Developer</span> 
                             <span class="resume-block__header-date">
-                                July 2016 - Present
+                                July 2016 - September 2024
                             </span>
                         </p>
                     </div>
@@ -349,7 +370,11 @@
                         <strong>Javascript</strong>
                         </li>
                         <li>
-                        <div class="progress percent60"></div>
+                        <div class="progress percent70"></div>
+                        <strong>Reactjs</strong>
+                        </li>
+                        <li>
+                        <div class="progress percent50"></div>
                         <strong>Angular</strong>
                         </li>
                         <li>
